tests/valid/tcomp000_letOfLet/letOfLet.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let x : Int = 
 let x : Int = 
  let x : Int = 
   let x : Int = 
    let x : Int = 
     let x : Int = 
      let x : Int = 
       let x : Int = 
        let x : Int = 
         let x : Int = 
          let x : Int = 
           let x : Int = 
            let x : Int = 
             let x : Int = 
              let x : Int = 
               let x : Int = 
                let x : Int = 
                 let x : Int = 
                  let x : Int = 
                   let x : Int = 
                    let x : Int = 
                     let x : Int = 
                      let x : Int = 
                       let x : Int = 
                        let x : Int = 
                         let x : Int = 
                          let x : Int = 
                           let x : Int = 
                            let x : Int = 
                             let x : Int = 
                              let x : Int = 
                               let x : Int = 
                                let x : Int = 
                                 let x : Int = 
                                  let x : Int = 
                                   let x : Int = 
                                    let x : Int = 
                                     let x : Int = 
                                      let x : Int = 
                                       let x : Int = 
                                        let x : Int = 
                                         let x : Int = 
                                          let x : Int = 
                                           let x : Int = 
                                            let x : Int = 
                                             let x : Int = 
                                              let x : Int = 
                                               let x : Int = 
                                                let x : Int = 
                                                 let x : Int = 
                                                  let x : Int = 
                                                   let x : Int = 
                                                    let x : Int = 
                                                     let x : Int = 
                                                      let x : Int = 
                                                       let x : Int = 
                                                        let x : Int = 
                                                         let x : Int = 
                                                          let x : Int = 
                                                           let x : Int = 
                                                            let x : Int = 
                                                             let x : Int = 
                                                              let x : Int = 
                                                               let x : Int = 
                                                                let x : Int = 
                                                                 let x : Int = 
                                                                  let x : Int = 
                                                                   let x : Int = 5
